pv-pvc/pvc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv-pvc
  namespace: pvc
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: 69966/springgradleimg:1.1.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: spring-pvc
              mountPath: /app/src/main/resources/images
      volumes:
        - name: spring-pvc
          persistentVolumeClaim:
          claimName: spring-pvc
