pv-pvc/pvc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: spring-pvc
  namespace: pvc
spec:
  rules: 
    - host: pvc.begoingdev.me
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: spring-service
                port: 
                  number: 8080
